# e2ee-relay

./: .gitignore  ANDROID.md  ATTACHMENTS.md  CONCEPT.md  DECENTRALIZATION.md  EVENTS.md  MESSAGES.md  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/quic/: mod.rs
client/src/realtime/: handshake.rs  listener.rs  mod.rs
client/src/utils/: mod.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/constants/: mod.rs  quic.rs  shared.rs  time.rs
common/src/events/: mod.rs
common/src/events/client/: mod.rs  payloads.rs
common/src/events/server/: mod.rs  payloads.rs
common/src/utils/: mod.rs
mobile/: .gitignore
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/promtuz/chat/: LauncherActivity.kt  MainActivity.kt  ManageSpace.kt  Promtuz.kt
mobile/app/src/main/java/com/promtuz/chat/di/: AppModule.kt  (+3 more)
mobile/app/src/main/java/com/promtuz/rust/: Core.kt  Crypto.kt
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/src/main/rust/: Cargo.toml
mobile/app/src/main/rust/src/: lib.rs  utils.rs
mobile/app/src/main/rust/src/crypto/: mod.rs
mobile/gradle/: libs.versions.toml
server/: Cargo.toml  app.toml  rustfmt.toml
server/scylla/: schema.sql
server/src/: main.rs
server/src/app/: db.rs  listener.rs  mod.rs  mq.rs
server/src/pages/: mod.rs  register.html
server/src/quic/: mod.rs
server/src/realtime/: listener.rs  mod.rs  routes.rs
server/src/routes/: mod.rs  register.rs
server/src/user/: mod.rs
server/src/utils/: config.rs  mod.rs
(+74 files in other folders)
