[package]
name = "client"
version = "0.1.0"
edition = "2024"
default-run = "client"

[dependencies]
bincode = "2.0.1"
common = { path = "../common" }
futures-util = "0.3.31"
hex = "0.4.3"
quinn = "0.11.9"
reqwest = "0.12.23"
rmp-serde = "1.3.0"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
