[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
scylla = "1.3.1"
serde = { version = "1.0.221", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
common = { path = "../common" }
rmp-serde = "1.3.0"
