[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
scylla = { version = "1.3.1", features = ["chrono-04"] }
serde = { version = "1.0.221", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
common = { path = "../common" }
rmp-serde = "1.3.0"
dotenv = "0.15.0"
chrono = "0.4.42"
async-nats = "0.43.1"
quinn = "0.11.9"
rcgen = "0.14.5"
serde_cbor = "0.11.2"
hex = "0.4.3"
